k8s/geth.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: geth-mainnet-full
spec:
  serviceName: geth-mainnet-full
  replicas: 1
  selector:
    matchLabels:
      app: geth-mainnet-full
  template:
    metadata:
      labels:
        app: geth-mainnet-full
    spec:
      containers:
        - name: geth-mainnet-full
          image: ethereum/client-go:v1.9.23
          args:
            [
              "--http",
              "--http.addr=0.0.0.0",
              "--http.vhosts=geth-mainnet-full",
              "--http.api=eth,net,web3,txpool",
              "--ws",
              "--ws.addr=0.0.0.0",
              "--datadir=/geth-data",
            ]
          ports:
            - containerPort: 8545
              name: gethrpc
            - containerPort: 30303
              name: gethdiscovery
          volumeMounts:
            - name: data
              mountPath: "/geth-data"
          resources:
            limits:
              memory: 12000Mi
            requests:
              memory: 10000Mi
  volumeClaimTemplates:
    - metadata:
        name: geth-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: do-block-storage
        resources:
          requests:
            storage: 700Gi
