k8s/lighthouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lighthouse
spec:
  type: ClusterIP
  selector:
    statefulset.kubernetes.io/pod-name: lighthouse-0
  ports:
    - protocol: TCP
      port: 5052
      name: http
      targetPort: 5052
    - protocol: TCP
      port: 5064
      name: validator-metrics
      targetPort: 5064
    - protocol: TCP
      port: 5054
      name: beacon-metrics
      targetPort: 5054
---
apiVersion: v1
kind: Service
metadata:
  name: lighthouse-peers
spec:
  type: NodePort
  selector:
    statefulset.kubernetes.io/pod-name: lighthouse-0
  ports:
    - protocol: TCP
      port: 9000
      name: peers-tcp
      targetPort: 9000
      nodePort: 30900
    - protocol: UDP
      name: peers-udp
      port: 9000
      targetPort: 9000
      nodePort: 30900
---
apiVersion: v1
kind: Service
metadata:
  name: lighthouse-api
spec:
  type: NodePort
  selector:
    statefulset.kubernetes.io/pod-name: lighthouse-0
  ports:
    - protocol: TCP
      name: node-api
      port: 5052
      targetPort: 5052
